Revert Redshift SUPER PRs (#12041)